# azure-ai-cookbook

./: LICENSE  README.md
examples/agents/: .env.example  README.md  agent_deep_research_bing.py  agent_group_chat_with_sk.py  agent_sk.ipynb  agent_with_mcp_plugin.py  az_ai_agents_mcp.py  azure_ai_agent_with_bing_grounding.py  azure_ai_agent_with_bing_grounding_and_autogen.ipynb  azure_ai_agent_with_code_interpreter.py  azure_ai_agent_with_function_calling.py  azure_ai_agent_with_openapi_defined_tools.py  bing_grounding.ipynb  bing_grounding_and_autogen.ipynb  bing_grounding_w_autogen.ipynb  catfacts_api.json  code_interpreter.ipynb  env.example  function_calling.ipynb  hf_smol_agent.ipynb  mockbin_api.json  multi_agent.ipynb  openapi_defined_tools.ipynb  requirements.txt  sample.env  user_functions.py
examples/computer_use/: .env.example  README.md  cua.py  local_computer.py  main.py  requirements.txt
examples/evaluation/: Azure OpenAI Evaluation API.ipynb  README.md  azure_ai_evaluation_violence.ipynb  azure_ai_evaluation_violence.py  requirements.txt  sample.env  violence_evaluation.ipynb
examples/ocr/: .env.example  mistral-ocr-with-vlm.ipynb  pyproject.toml  requirements.txt
examples/research/: .env.example  main.py  pyproject.toml
examples/search/: README.md  azure_ai_search_chat_with_data.ipynb  azure_ai_search_full_text_search.ipynb  requirements.txt  (+2 more)
guides/: README.md  ptu-capacity.ipynb  requirements.txt
tutorials/memory/: 01_basic_memory_operations.py  02_travel_planning_assistant.py  README.md  pyproject.toml  requirements.txt  sample.env
(+49 files in other folders)
